# rust-api

./: Cargo.toml  docker-compose.yml  readme.md
migrations/2021-03-07-175918_create_table_users/: up.sql
src/: errors.rs  lib.rs  main.rs
src/config/: auth.rs  config.rs  mod.rs  token.rs
src/db/: users.rs
src/models/: user.rs
src/routes/: users.rs
