[package]
authors = ["Redfox <vitor_pereira.2013@hotmail.com>"]
version = "0.1.0"
name = "rustapi"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.15.0"
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json", "diesel_postgres_pool"]
